# CC-UMA-Simulator

./: .gitignore  CMakeLists.txt  Makefile  README  README.md  config.cpp  config.h  config.hpp  main.cpp  stats.hpp  test.sh
bus/: Bus.cpp  Bus.hpp
cache/: Cache.cpp  Cache.hpp  CacheController.cpp  CacheController.hpp  CacheLine.cpp  CacheLine.hpp  CacheSet.cpp  CacheSet.hpp
cpu/: CPU.cpp  CPU.hpp
protocols/: DragonProtocol.hpp  MesiProtocol.hpp  MoesiProtocol.hpp  protocol.hpp
states/: DragonState.hpp  MesiState.cpp  MesiState.hpp  MoesiState.cpp  MoesiState.hpp  State.hpp
timer/: Timer.cpp  Timer.h  Timer.hpp
traces/: Trace.cpp  Trace.hpp
